--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ wasm-bindgen = "0.2.84"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 js-sys = "0.3"
+web-sys = { version = "0.3", features = ["console"] }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
