--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,9 @@ jobs:
     - name: Build frontend
       run: cd frontend && npm run build
       
+    - name: Add .nojekyll file
+      run: touch ./frontend/dist/.nojekyll
+      
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       if: github.ref == 'refs/heads/main'
